lox-tests/tests/field/set_evaluation_order.stderr
ERROR: Undefined variable name 'undefined1'
 --> 1:1
  |
1 | undefined1.bar // expect runtime error: Undefined variable 'undefined1'.
  | ^--------^
